Addressed issues in the PR review